# teste-placa-savio

components/HCF_SOFT/: CMakeLists.txt  HCF_SOFT.c  HCF_SOFT.h
components/ioplaca/: CMakeLists.txt  ioplaca.c  ioplaca.h
components/lcdvia595/: CMakeLists.txt  lcdvia595.c  lcdvia595.h
components/mp_hcf/: CMakeLists.txt  mp_hcf.c  mp_hcf.h
main/: CMakeLists.txt  app_main.c
